# brief-ci-cd-semantic-release-mk-dcdocs

./: .pre-commit-config.yaml  .secrets.baseline  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml  sync-develop.yml
Course/: COMPARATIF_OUTILS.md  PROBLEMES_DETECTES.md
api/models/: index.html
api/routes/: index.html
api/services/: index.html
app/: database.py  main.py
app/models/: item.py
app/routes/: items.py
brief/: REFLEXION_GIT_BRANCHING.md  VEILLE_CICD.md
changelog/: index.html
cicd/: index.html
docs/: changelog.md  cicd.md  getting-started.md  index.md
docs/api/: models.md  routes.md
getting-started/: index.html
search/: search_index.json
tests/: conftest.py  test_items.py  test_main.py
